<resources>
    <string name="app_name">ZhuNet</string>

    <!-- Main Activity: -->
    <string name="main_btn_graph">Graph</string>
    <string name="main_btn_settings">Settings</string>
    <string name="main_btn_calendar">Calendar</string>
    <string name="main_btn_alarm">Alarm</string>
    <string name="main_btn_sport">Sport</string>

    <!-- Graph Activity: -->
    <string name="graph_btn_settings">Settings</string>
    <string name="graph_btn_reset">Reset</string>
    <string name="graph_btn_calendar">Calendar</string>

    <!-- Keys for the Data stored in SharedPreferences         -->
    <!-- Stored as Strings, have to be Parsed to be retrieved. -->
    <string name="current_cycle">richter.julian.zhunet.current_cycle</string>
    <string name="maxDaysShown">richter.julian.zhunet.maxDaysShown</string>
    <string name="minDaysShown">richter.julian.zhunet.minDaysShown</string>
    <string name="maxTemperatureRangeShown">richter.julian.zhunet.maxTemperatureRangeShown</string>
    <string name="minTemperatureRangeShown">richter.julian.zhunet.minTemperatureRangeShown</string>

</resources>
