<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="richter.julian.zhunet.MainActivity">

    <!-- Button to open the Graph View. -->
    <Button
        android:id="@+id/bGraphMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_graph" />

    <Button
        android:id="@+id/bSettingsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_settings" />

    <Button
        android:id="@+id/bCalendarMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_calendar" />

    <Button
        android:id="@+id/bAlarmMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_alarm" />

    <Button
        android:id="@+id/bFitnessMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_sport" />
</LinearLayout>
